# ASM32

./: .gitignore  CMakeLists.txt  README.md
ASM32-Documentation/: ASM32 Instruction Set.xlsx  ASM32 Reference Manual.md
ASM32-Source/: ASM32.cpp  ASM32.hpp  ASM32.out  ASM32.vcxproj  ASM32.vcxproj.filters  ASM32out.txt  Changelog.txt  ELFDumpA00.1.06.txt  ELFwriter.cpp  Test.out  Test.s  codegen.cpp  constants.hpp  hello_x86_64  lexer.cpp  parser.cpp  utils.cpp
ASM32-Source/ASM32.xcodeproj/: project.pbxproj
ASM32-Source/ASM32.xcodeproj/project.xcworkspace/xcuserdata/helmutfieres.xcuserdatad/: UserInterfaceState.xcuserstate
ASM32-Source/ASM32.xcodeproj/xcshareddata/xcschemes/: ASM32.xcscheme
ASM32-Source/ASM32.xcodeproj/xcuserdata/helmutfieres.xcuserdatad/xcschemes/: xcschememanagement.plist
